Fix .badge text alignment in some cases

--- a/web/css/src/themes/default.css
+++ b/web/css/src/themes/default.css
@@ -2122,6 +2122,7 @@
 	color: #6c6c6c;
 	padding-left: 4px;
 	padding-right: 4px;
+	text-align: center;
 	text-shadow: 0 1px #fafafa;
 	border: 1px solid #b8b8b8;
 	background-color: #eaeaea;
